@@ -1,39 +1,46 @@
-# Automatically generated by php-weathermap v0.95b
+# Automatically generated by php-weathermap v0.96test2
 
-FONTDEFINE 10 Vera.ttf 8
-FONTDEFINE 12 Vera.ttf 6
-FONTDEFINE 20 VeraIt.ttf 8
-FONTDEFINE 30 VeraIt.ttf 18
-FONTDEFINE 40 Vera.ttf 12
 
-# BACKGROUND images/background1_950x625_197.jpg
 WIDTH 1000
 HEIGHT 650
-BGCOLOR 200 200 220
 HTMLSTYLE overlib
+KEYFONT 10
 TITLEFONT 30
 TITLE 0.96 Test Map
 HTMLOUTPUTFILE weathermap.html
 TITLEPOS 30 30
 
 KEYPOS DEFAULT 470 30 Traffic Load
-KEYSTYLE DEFAULT inverted 500
-KEYFONT 10
+KEYSTYLE  DEFAULT inverted 500
 KEYTEXTCOLOR 0 0 0
 KEYOUTLINECOLOR 0 0 0
 KEYBGCOLOR 255 255 255
-# BGCOLOR 255 255 255
+BGCOLOR 200 200 220
 TITLECOLOR 0 0 0
 TIMECOLOR 0 0 0
+SCALE DEFAULT 0 0   192 192 192  
+SCALE DEFAULT 0 1   255 255 255  
+SCALE DEFAULT 1 10   140 0 255  
+SCALE DEFAULT 10 25   32 32 255  
+SCALE DEFAULT 25 40   0 192 255  
+SCALE DEFAULT 40 55   0 240 0  
+SCALE DEFAULT 55 70   240 240 0  
+SCALE DEFAULT 70 85   255 192 0  
+SCALE DEFAULT 85 100   255 0 0  
+
+SET key_hidezero_DEFAULT 1
+
+# End of global section
 
 
-# DEFAULT definitions:
+# TEMPLATE-only NODEs:
 NODE DEFAULT
 	LABELFONT 10
-#	LABELBGCOLOR 250 250 255
 	LABELFONTCOLOR contrast
 	MAXVALUE 100
 
+
+# TEMPLATE-only LINKs:
 LINK DEFAULT
 	WIDTH 3
 	BWFONT 20
@@ -44,34 +51,45 @@ LINK DEFAULT
 	BANDWIDTH 17M
 
 
+# regular NODEs:
 NODE server1
-    POSITION 100 100
-    LABEL FTP
-    ICON 75 75 round
-    
+	LABEL FTP
+	ICON 75 75 round
+	POSITION 150 190
+
 NODE server1-root
-    POSITION server1 90r40
-    ICON 24 24 inpie
-    LABELOUTLINECOLOR none
-    LABELBGCOLOR none
-    LABEL /
-    LABELOFFSET E
+	LABEL /
+	LABELOFFSET E
+	LABELOUTLINECOLOR none
+	LABELBGCOLOR none
+	ICON 24 24 inpie
+	POSITION server1 90r40
 
 NODE server1-var
-    POSITION server1 60r40
-    ICON 24 24 inpie
-    LABELOUTLINECOLOR none
-    LABELBGCOLOR none
-    LABEL /var
-    LABELOFFSET E
+	LABEL /var
+	LABELOFFSET E
+	LABELOUTLINECOLOR none
+	LABELBGCOLOR none
+	ICON 24 24 inpie
+	POSITION server1 60r40
 
 NODE server1-usr
-    POSITION server1 120r40
-    TARGET static:10G:10G
-    MAXVALUE 30G
-    LABEL /usr
-    
-    LABELOUTLINECOLOR none
-    LABELBGCOLOR none
-    ICON 24 24 inpie
-    LABELOFFSET E
+	LABEL /usr
+	LABELOFFSET E
+	LABELOUTLINECOLOR none
+	LABELBGCOLOR none
+	ICON 24 24 inpie
+	TARGET static:10G:10G
+	POSITION server1 120r40
+	MAXVALUE 30G
+
+NODE server1_copy
+	LABEL FTP
+	ICON 75 75 round
+	POSITION 170 270
+
+
+# regular LINKs:
+
+
+# That's All Folks!
